# audio-modulation-visual-control

./: README.md  audio_player.py  gesture.py  main.py  pyproject.toml  shared_state.py
src/: audio_player.py  config.py  gesture.py  shared_state.py
